# Pico2WWebServer

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  fsdata_custom.c  lwipopts.h  main.cpp  makefsdata  wifi_config.h  wifi_config.h.example
fs/: index.html  script.js  style.css
